# opengl_renderer

./: CMakeLists.txt  README.md  imgui.ini
include/: camera.h  error_printer.h  mesh.h  op_mesh.h  op_model.h  op_window.h  shader.h  ui.h
shaders/crate/: crate.fs
shaders/fragment/: square.fs
shaders/light/: light.vs
shaders/texture_shaded/: texture_shaded.fs  texture_shaded.vs
shaders/vertex/: crate.vs  square.vs
source/: camera.cpp  error_printer.cpp  main.cpp  mesh.cpp  op_mesh.cpp  op_window.cpp  shader.cpp  ui.cpp
